--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
             <div class="row">
                 <div class="col-md-8">
                     <div class="copyright">
-                        <p>&copy; 2015 uCommerce. All Rights Reserved. <a href="http://www.freshdesignweb.com" target="_blank">freshDesignweb.com</a></p>
+                        <p>&copy; 2015 McMart. All Rights Reserved. <a href="http://www.900website.com" target="_blank">freshDesignweb.com</a></p>
                     </div>
                 </div>
                 
